added translation to texts

--- a/client/lang/en.json
+++ b/client/lang/en.json
@@ -24,6 +24,7 @@
 	"click_here_to_access_to_your_friends": "Click here to access to your friends",
 	"my_chats": "My chats",
 	"my_friends": "My friends",
+	"settings": "My settings",
 	"year_ago": "a year ago",
 	"years_ago": "years ago",
 	"month_ago": "a month ago",
