--- a/client/lang/fr.json
+++ b/client/lang/fr.json
@@ -24,6 +24,7 @@
 	"click_here_to_access_to_your_friends": "Cliquer ici pour accéder à vos amis",
 	"my_chats": "Mes conversations",
 	"my_friends": "Mes amis",
+	"settings": "Mes réglages",
 	"year_ago": "il y a un an",
 	"years_ago": "il y a {0} ans",
 	"month_ago": "il y a un mois",
